# axum-js

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STYLE_GUIDE.md  base.ts  build.rs  index.d.ts  index.js  package.json  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  dependency-tracker.yml  publish.yml  test.yml
__test__/: index.spec.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/application/: app.rs  request.rs  response.rs
src/utils/: version.rs
