[package]
edition = "2021"
name = "lambda_axum-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.6.20", features = [] }
# See https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.3", default-features = false, features = [
  "napi8",
  "async",
  "serde",
  "serde_json",
  "serde-json",
] }
napi-derive = "2.13.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
